--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,27 @@
         <spring.boot.version>2.0.0.M3</spring.boot.version>
     </properties>
 
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+	
+    <developers>
+        <developer>
+            <name>Gregory Anne</name>
+            <email>englishblazere@free.fr</email>
+            <url>https://github.com/zg2pro</url>
+        </developer>
+        <developer>
+            <name>Moses Meyer</name>
+            <email>xxxxx</email>
+            <url>https://github.com/MosesMeyer</url>
+        </developer>
+    </developers>
     <scm>
         <connection>scm:git:https://github.com/zg2pro/spring-rest-basis.git</connection>
         <developerConnection>scm:git:git@github.com:zg2pro/spring-rest-basis.git</developerConnection>
