--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring.boot.version>2.0.0.M3</spring.boot.version>
+        <spring.boot.version>2.0.0.RELEASE</spring.boot.version>
         <spring.rest.basis.version>0.4</spring.rest.basis.version>
         <spring.safe.setup.version>0.2</spring.safe.setup.version>
     </properties>
@@ -97,15 +97,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.0.0.RC3</version>
+            <version>5.0.0.RELEASE</version>
         </dependency>
     </dependencies>
 
     <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <url>http://repo.spring.io/milestone/</url>
-        </repository>
         <repository>
             <id>central</id>
             <url>http://repo.maven.apache.org/maven2/</url>
